Fix scrolling iframe on iOS

--- a/app/assets/sass/partials/webchat.scss
+++ b/app/assets/sass/partials/webchat.scss
@@ -8,14 +8,19 @@ $iframe-width: 100 - $webchat-width;
 // ========================================
 
 .iframe-container {
-	// Enaable scrolling on iOS
-	-webkit-overflow-scrolling: touch;
-	overflow-y: scroll;
-	
 	width: $iframe-width;
 	position: fixed;
 
+	// Enaable scrolling on iOS
+	right: 0;
+	bottom: 0;
+	left: 0;
+	top: 0;
+	-webkit-overflow-scrolling: touch;
+	overflow-y: auto;
+
 	iframe {
+		height: 100%;
 		width: 100%;
 	}
 
@@ -48,8 +53,6 @@ $iframe-width: 100 - $webchat-width;
 .webchat__container {
 	// Enaable scrolling on iOS
 	-webkit-overflow-scrolling: touch;
-	overflow-y: scroll;
-
 	border-left: 1px solid $border-colour;
 	border-right: 1px solid $border-colour;
 	box-sizing: border-box;
